v1/tests/elab/ok/array_lit/check_array_lit.pion
def a: Array(Int, _) = [];
def b: Array(Int, 1) = [1];
def c: Array(_, 1) = [1];
