v1/tests/elab/errors/array_lit/array_len_mismatch.pion
def error: Array(_, 2) = [1];
